Mon Aug 23 10:13:05 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc(parse): fix problems with null pointer when attempting
	SGML entity decoding on bare &, as reported by Vadim Chekan.

Thu Aug 19 11:52:06 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/htsearch.cc(main): Fix to allow multiple keywords
	input parameter definitions.

	* contrib/parse_doc.pl: make spaces optional in LANGUAGE = POSTSCRIPT
	PJL test.

Wed Aug 18 11:27:46 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/PDF.cc(parse): Fixed wrong variable name in new code.
	Double-Oops!  (It was Friday the 13th, after all...)

Tue Aug 17 16:26:46 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/HtHeap.cc(Remove): apply Geoff's patch to fix Remove.

	* htlib/HtVector.h, htlib/HtVector.cc(Index): various bounds overrun
	bug fixes and checking in Last(), Nth() & Index().

Mon Aug 16 13:55:10 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(expandVariables): fix up test for &amp;

Mon Aug 16 12:08:57 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* Makefine.am, Makefile.in, installdir/Makefile.am,
	installdir/Makefile.in: change all remaining INSTALL_ROOT to DESTDIR.

Fri Aug 13 15:44:31 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/PDF.cc(parse): added missing ')' in new code.  Oops!

	* htlib/strptime.c, htlib/mktime.c: added #include "htconfig.h"
	to pick up definitions from configure program. Let's try to
	remember that config.h != htconfig.h!

Fri Aug 13 14:00:16 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/PDF.cc(parse), htcommon/defaults.cc, htdoc/attrs.html
	(pdf_parser): Removed -pairs option from default arguments, added
	special test for acroread to decide whether to use output file or
	directory as last argument (also adds -toPostScript if missing).
	Program now tries to test for existance of parser before trying
	to call it.
