@@ -3,7 +3,7 @@
 // functions and other common functions without having to manage
 // the attributes or the exact attribute combination semantics.
 //
-// $Id: HtWordType.cc,v 1.1 1999/03/17 03:23:51 hp Exp $
+// $Id: HtWordType.cc,v 1.2 1999/08/25 21:39:13 grdetil Exp $
 //
 
 #include "HtWordType.h"
@@ -23,4 +23,17 @@ HtWordType::Initialize(Configuration &config)
   HtWordType::statics.extra_word_characters = extra_word_chars;
   HtWordType::statics.valid_punctuation = valid_punct;
   HtWordType::statics.other_chars_in_word = punct_and_extra;
+  HtWordType::statics.chrtypes[0] = 0;
+  for (int i = 1; i < 256; i++)
+  {
+    HtWordType::statics.chrtypes[i] = 0;
+    if (isalpha(i))
+	HtWordType::statics.chrtypes[i] |= HtWt_Alpha;
+    if (isdigit(i))
+	HtWordType::statics.chrtypes[i] |= HtWt_Digit;
+    if (strchr(extra_word_chars, i))
+	HtWordType::statics.chrtypes[i] |= HtWt_Extra;
+    if (strchr(valid_punct, i))
+	HtWordType::statics.chrtypes[i] |= HtWt_ValidPunct;
+  }
 }
